--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -22,7 +22,7 @@ compromisso
               <input formControlName="senha" class="form-control form-control-lg" placeholder="Digite sua senha" type="password">
 
             </div>
-            <div class="mb-5">Não possui conta? <a><span style="color: var(--lar); font-weight: bold; cursor: pointer;" routerLink="/cadastrar">Cadastre-se</span></a></div>
+            <div class="mb-5">Não possui conta? <a><span style="color: var(--lar); font-weight: bold; cursor: pointer;" routerLink="cadastrar">Cadastre-se</span></a></div>
 
             <div class="form-group ">
               <button class="btn btn-success btn-lg col-12" type="submit">Login</button>
