--- a/src/app/shared/menu/menu.component.css
+++ b/src/app/shared/menu/menu.component.css
@@ -38,7 +38,7 @@
     border-bottom: 1px solid #fff;
   }
   nav {
-    background: var(--ver);
+    background: var(--primaria);
     padding-right: .25em;
     position: fixed;
     left: -18em;
@@ -68,7 +68,7 @@
        cursor: pointer;
   }
   .nav-top{
-      background-color: var(--ver);
+      background-color: var(--primaria);
       width: 100%;
       height: 50px;
       position: fixed;
