--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -21,10 +21,38 @@
           <!-- <div *ngIf="tipoUsuario=='[U]'">  -->
             <div> 
     
-          <li>
-            <a routerLink="cliente/reservas" onclick="  $('nav').removeClass('active');">
-              <i class="far fa-calendar-check fa-lg p-25"></i> <span>Reservas</span></a>
-          </li>
+              <!-- Cliente -->
+              <div *ngIf="usuarioLogado.tipo=='C'">
+                <li>
+                  <a routerLink="cliente/reservas" onclick="  $('nav').removeClass('active');">
+                    <i class="far fa-calendar-check fa-lg p-25"></i> <span>Reservas</span></a>
+                </li>
+              </div>
+              
+              <!-- ADM e Funcionário -->
+              <div *ngIf="usuarioLogado.tipo=='A' || usuarioLogado.tipo=='F'">
+                <li>
+                  <a routerLink="funcionario/reservas" onclick="  $('nav').removeClass('active');">
+                    <i class="far fa-calendar-check fa-lg p-25"></i> <span>Reservas</span></a>
+                </li>
+
+                <li>
+                  <a routerLink="funcionario/espacos" onclick="  $('nav').removeClass('active');">
+                    <i class="far fa-calendar-check fa-lg p-25"></i> <span>Espaços</span></a>
+                </li>
+                
+              </div>
+
+              <!-- Somente ADM -->
+              <div *ngIf="usuarioLogado.tipo=='A'">
+                <li>
+                  <a routerLink="funcionario/quadra" onclick="  $('nav').removeClass('active');">
+                    <i class="far fa-calendar-check fa-lg p-25"></i> <span>Quadra</span></a>
+                </li>
+              </div>
+             
+             
+              
            <!-- <li>
             <a routerLink="clientes/quadras" onclick="  $('nav').removeClass('active');">
               <i class="fas fa-map-marker-alt  fa-lg p-25"></i> <span>Quadras</span></a>
