--- a/src/app/cliente/cadastrar/cadastrar.component.html
+++ b/src/app/cliente/cadastrar/cadastrar.component.html
@@ -1,52 +1,63 @@
-<div class="container">
-<h1 class="mt-5 mb-6 text-center">Criar uma nova conta</h1>
-<form [formGroup]="formulario" (ngSubmit)="cadastrar()" >
-
-  <div class="row mt-5" >
-    <div class="col-md-8">
-      <label for="cd-nome">NOME <span style="color: red;">*</span></label>
-      <input class="form-control" id="cd-nome"  formControlName="nome" >
-        
+<div class="container-login">
+  <div class="left">
+    <div>
+      <h1>
+        Sua diversão, nosso compromisso
+      </h1>
     </div>
-    <div class="col-md-4">
-      <label for="cd-cpf">CPF <span style="color: red;">*</span></label>
-      <input class="form-control" id="cd-cpf"  formControlName="cpf" >
-        
-    </div>  
+    <div>
+      <img src="/assets/img/img.png" class="mt-5">
+    </div>
   </div>
 
-  <div class="row mt-5" >
-    <div class="col-md-8">
-      <label for="cd-email">EMAIL <span style="color: red;">*</span></label>
-      <input class="form-control" id="cd-email" formControlName="email" >
-        
+    <div class="right">
+      <h1 class="mt-5 mb-6 text-center">Criar uma nova conta</h1>
+      <form [formGroup]="formulario" (ngSubmit)="cadastrar()" >
+
+        <div class="row mt-5" >
+          <div class="col-md-8">
+            <label for="cd-nome">NOME <span style="color: red;">*</span></label>
+            <input class="form-control" id="cd-nome"  formControlName="nome" placeholder="João da Silva" >
+              
+          </div>
+          <div class="col-md-4">
+            <label for="cd-cpf">CPF <span style="color: red;">*</span></label>
+            <input [textMask]="{mask: cpf}" class="form-control" id="cd-cpf"  formControlName="cpf" placeholder="999.999.999-99">
+              
+          </div>  
+        </div>
+
+        <div class="row mt-5" >
+          <div class="col-md-8">
+            <label for="cd-email">EMAIL <span style="color: red;">*</span></label>
+            <input class="form-control" id="cd-email" formControlName="email" placeholder="email@email.com">
+              
+          </div>
+          <div class="col-md-4">
+            <label for="cd-fone">FONE <span style="color: red;">*</span></label>
+            <input [textMask]="{mask: fone}" class="form-control"  id="cd-fone" formControlName="fone" placeholder="(99) 99999-9999">
+              
+          </div>  
+        </div>
+
+        <div class="row mt-5" >
+          <div class="col-md-6">
+            <label for="cd-login">LOGIN <span style="color: red;">*</span></label>
+            <input class="form-control" id="cd-login"  formControlName="login" placeholder="meulogin" >
+            
+          </div>
+          <div class="col-md-6">
+            <label for="cd-senha">SENHA <span style="color: red;">*</span></label>
+            <input class="form-control" id="cd-senha"  type="password" formControlName="senha" placeholder="minhasenha">
+            
+          </div>  
+        </div>
+       <p class="mt-3"> <span style="color: red;">*</span> itens obrigatórios </p>
+
+        <div class="btns">
+          <button (click)="cancelar()"  class="btn btn-lg btn-danger text-right mt-5 rounded-0">Cancelar</button>
+          <button  type="submit" class="btn btn-lg btn-success text-right mt-5 rounded-0">Cadastrar</button>          
+        </div>  
+      </form>
     </div>
-    <div class="col-md-4">
-      <label for="cd-fone">FONE <span style="color: red;">*</span></label>
-      <input class="form-control"  id="cd-fone" formControlName="fone" >
-        
-    </div>  
-  </div>
-
-  <div class="row mt-5" >
-    <div class="col-md-6">
-      <label for="cd-login">LOGIN <span style="color: red;">*</span></label>
-      <input class="form-control"  formControlName="login" >
-      
-    </div>
-    <div class="col-md-6">
-      <label for="exampleFormControlSelect1">SENHA <span style="color: red;">*</span></label>
-      <input class="form-control"   formControlName="senha" >
-       
-    </div>  
-  </div>
-  <span style="color: red;">*</span> itens obrigatórios
-
-<div class="btns">
-
-  <button (click)="cancelar()"  class="btn btn-lg btn-danger text-right mt-5 rounded-0">Cancelar</button>
-  <button  type="submit" class="btn btn-lg btn-success text-right mt-5 rounded-0">Cadastrar</button>
-  
-</div>  
-</form>
 </div>
