--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -1,9 +1,13 @@
 <div class="container-login">
   <div class="left">
-    <h1>
-      Sua diversão, nosso
-compromisso
-    </h1>
+    <div>
+      <h1>
+        Sua diversão, nosso compromisso
+      </h1>
+    </div>
+    <div>
+      <img src="/assets/img/img.png" class="mt-5">
+    </div>
   </div>
 
   <div class="right">
