cadastro ded horários

--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -44,6 +44,11 @@
                   <a routerLink="funcionario/espacos" onclick="  $('nav').removeClass('active');">
                     <i class="fa fa-cubes fa-lg p-25" aria-hidden="true"></i><span>Espaços</span></a>
                 </li>
+
+                <li>
+                  <a routerLink="funcionario/horarios" onclick="  $('nav').removeClass('active');">
+                    <i class="fa fa-clock fa-lg p-25" aria-hidden="true"></i><span>Horários</span></a>
+                </li>
                 
               </div>
 
