--- a/src/app/funcionario/reservas-quadra/reservas-quadra.component.html
+++ b/src/app/funcionario/reservas-quadra/reservas-quadra.component.html
@@ -1,5 +1,20 @@
 <div class="container mt-5">
-    <p>reservas-quadra works!</p>
-</div>
- 
 
+    <h1>Reservas</h1>
+    <ng-template  ngFor [ngForOf]="reservas" let-reserva let-i="index">
+        
+        <accordion [isAnimated]="true">
+            <accordion-group [heading]=" reserva.espaco.nome  +' - '+reserva.data" style="text-decoration: none;">              
+              <p>Horário: {{ reserva.hora }}</p>
+              <p>Cliente: {{ reserva.usuario.nome  }}</p>
+              
+              <button class="btn btn-sm btn-warning text-right mt-2" (click)="editar(reserva)">Editar</button>
+            </accordion-group>
+            </accordion>
+      </ng-template >
+      <div>
+        <button  type="button" class="btn btn-lg btn-success text-right mt-5 " (click)="novoEspaco()">Nova reserva</button>
+     
+
+      </div>
+</div>
