--- a/src/app/funcionario/cadastro-espacos/novo-espaco/novo-espaco.component.html
+++ b/src/app/funcionario/cadastro-espacos/novo-espaco/novo-espaco.component.html
@@ -8,7 +8,7 @@
           <input class="form-control" id="cd-nome"  formControlName="nome" placeholder="Quadra de futsal...">            
         </div>
         <div class="col-md-4">
-          <label for="cd-qtdMax">QUANTIDADE MÁXIMA <span style="color: red;">*</span></label>
+          <label for="cd-qtdMax">QUANTIDADE MÁXIMA DE PESSOAS<span style="color: red;">*</span></label>
           <input class="form-control" type="number" id="cd-qtdMax" formControlName="qtdMax" placeholder="20">
             
         </div>
