--- a/src/app/cliente/reservas/editar-reserva/editar-reserva.component.html
+++ b/src/app/cliente/reservas/editar-reserva/editar-reserva.component.html
@@ -37,7 +37,7 @@
       <div class="btns">
     
         <button [ngStyle]="{'display': display_c}"  type="button" (click)="cancelar();"  class="btn btn-lg btn-primary text-right mt-5 rounded-0">Cancelar</button>
-        <button  [ngStyle]="{'display': display_c}" type="button" (click)="excluir();" class="btn btn-lg btn-danger text-right mt-5 rounded-0" >Excluir</button>
+        <button  [ngStyle]="{'display': display_c}" type="button" (click)="openModal(template);" class="btn btn-lg btn-danger text-right mt-5 rounded-0" >Excluir</button>
         <button  [ngStyle]="{'display': display_c}" type="submit" class="btn btn-lg btn-success text-right mt-5 rounded-0" >Salvar</button>
         
      
@@ -50,3 +50,31 @@
     </div>  
     </form>
     </div>
+
+    <ng-template #template>
+      <div class="modal-header">
+        <h4 class="modal-title pull-left" id="my-modal-title">Cancelamento de reserva</h4>
+        <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="modalRef?.hide()">
+          <span aria-hidden="true" class="visually-hidden">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="formularioModal" (ngSubmit)="excluirReserva()">
+  
+          <div class="form-row"> 
+        
+            <div class="col-md-12">
+              <label for="cd-motivo">MOTIVO <span style="color: red;">*</span></label>
+              <textarea style=" resize: none; height: 100px;" class="form-control" id="cd-motivo"  formControlName="motivo" placeholder="Digite aqui o motivo do cancelamento"></textarea>
+                
+            </div> 
+            <button  type="submit"  class="btn btn-danger  mt-5 col-12">Excluir Reserva</button>
+       
+           
+          </div>
+
+          
+             
+        </form>
+      </div>
+    </ng-template>
